
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_pNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="91dp"
        android:hint="@string/edit_PN"
        android:inputType="phone"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/editPhoto"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignBottom="@+id/edit_pNumber"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/photo" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/edit_Name"
        android:inputType="textCapWords"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="167dp"
        android:hint="@string/edit_detail"
        android:inputType="textCapWords"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/dark_blue"
        android:gravity="center_horizontal"
        android:text="@string/edit_details"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pale_blue"
        android:textSize="55sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:onClick="onClick"
        android:text="@string/edit_btn" />

</RelativeLayout>

